// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`api > returns appropriate content for health 1`] = `
{
  "status": "ok",
}
`;

exports[`api > returns appropriate content for something-that-is-random 1`] = `
{
  "error": "Not Found",
  "status": 404,
}
`;

exports[`api > returns appropriate content for version 1`] = `
{
  "version": "0.1.0",
}
`;

exports[`auth > can run through the whole sign up, login and refresh flow 1`] = `
{
  "accessToken": "swa:351491345f378acc5c06a9f29856f9f89f96981898ea190e7f6bce20ca9ece79:11111111111111111111111111111111",
  "accessTokenExpiry": 1746403200000,
  "clientId": "test-client-id",
  "refreshToken": "swr:351491345f378acc5c06a9f29856f9f89f96981898ea190e7f6bce20ca9ece79:22222222222222222222222222222222",
  "refreshTokenExpiry": 1748908800000,
}
`;

exports[`auth > can run through the whole sign up, login and refresh flow 2`] = `
{
  "accessToken": "swa:351491345f378acc5c06a9f29856f9f89f96981898ea190e7f6bce20ca9ece79:33333333333333333333333333333333",
  "accessTokenExpiry": 1746403200000,
  "clientId": "test-client-id",
  "refreshToken": "swr:351491345f378acc5c06a9f29856f9f89f96981898ea190e7f6bce20ca9ece79:44444444444444444444444444444444",
  "refreshTokenExpiry": 1748908800000,
}
`;

exports[`auth > can run through the whole sign up, login and refresh flow 3`] = `
{
  "accessToken": "swa:351491345f378acc5c06a9f29856f9f89f96981898ea190e7f6bce20ca9ece79:11111111111111111111111111111111",
  "accessTokenExpiry": 1746403200000,
  "clientId": "test-client-id",
  "refreshToken": "swr:351491345f378acc5c06a9f29856f9f89f96981898ea190e7f6bce20ca9ece79:22222222222222222222222222222222",
  "refreshTokenExpiry": 1748908800000,
}
`;

exports[`auth > can run through the whole sign up, login and refresh flow 4`] = `
{
  "gameId": "game-4",
}
`;
